testsuite/tests/builtins/stream_methods/reduce/missing_init_param/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(s.reduce("Not a function", 0))
   │       ──────────────┬──────────────  
   │                     ╰──────────────── Expecting a "Function" for the parameter "fn", got a "Str"
───╯
